# eupanda

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
action/: MoveToContact.action  MoveToEE.action  UserSync.action
include/panda_pbd/: demo_interface.h  primitive_interface.h
launch/: demo.launch  demo_interface.launch  demo_interface_moveit.launch  eup_interface.launch  expert_data_collection.launch  gui_development.launch  multiple_controller.launch  offline_development.launch  online_development.launch  user_study.launch
resources/: complex_program.pkl  high5.pkl  marble.pkl  plate_ball.pkl  program.pkl  push_heavy.pkl  push_light.pkl
resources/expert_logs/handover/E/01/: 0820_1315.pkl
resources/expert_logs/handover/E/02/: 0820_1438.pkl
resources/expert_logs/handover/E/03/: 0820_1551.pkl
resources/expert_logs/handover/E/04/: 0821_1336.pkl
resources/expert_logs/handover/E/05/: 0821_1422.pkl
resources/expert_logs/handover/E/06/: 0821_1505.pkl
resources/expert_logs/handover/E/07/: 0822_1301.pkl
resources/expert_logs/handover/E/08/: 0822_1553.pkl
resources/expert_logs/handover/S/01/: 0820_1309.pkl
resources/expert_logs/handover/S/02/: 0820_1447.pkl
resources/expert_logs/handover/S/03/: 0820_1609.pkl
resources/expert_logs/handover/S/04/: 0821_1326.pkl
resources/expert_logs/handover/S/05/: 0821_1413.pkl
resources/expert_logs/handover/S/06/: 0821_1514.pkl
resources/expert_logs/handover/S/08/: 0822_1539.pkl
resources/expert_logs/handover/s/07/: 0822_1310.pkl
resources/expert_logs/marble/E/01/: 0820_1342.pkl
resources/expert_logs/marble/E/02/: 0820_1506.pkl
resources/expert_logs/marble/E/03/: 0820_1633.pkl
resources/expert_logs/marble/E/04/: 0821_1354.pkl
resources/expert_logs/marble/E/05/: 0821_1443.pkl
resources/expert_logs/marble/E/06/: 0821_1525.pkl
resources/expert_logs/marble/E/07/: 0822_1326.pkl
resources/expert_logs/marble/E/08/: 0822_1616.pkl
resources/expert_logs/marble/S/01/: 0820_1339.pkl
resources/expert_logs/marble/S/02/: 0820_1512.pkl
resources/expert_logs/marble/S/03/: 0820_1640.pkl
resources/expert_logs/marble/S/04/: 0821_1349.pkl
resources/expert_logs/marble/S/05/: 0821_1438.pkl
resources/expert_logs/marble/S/06/: 0821_1533.pkl
resources/priors/: priors.pkl  priors_eff.pkl  priors_safe.pkl
resources/user_study_logs/active/1/: 0905_1042.pkl  0905_1042_partial.pkl
resources/user_study_logs/active/2/: 0906_0911.pkl  0906_0911_partial.pkl
resources/user_study_logs/active/3/: 0906_1029.pkl  0906_1029_partial.pkl
resources/user_study_logs/active/4/: 0906_1217.pkl  0906_1217_partial.pkl
resources/user_study_logs/active/5/: 0906_1329.pkl  0906_1329_partial.pkl
resources/user_study_logs/active/6/: 0908_1105.pkl  0908_1105_partial.pkl
resources/user_study_logs/active/7/: 0909_1025.pkl  0909_1025_partial.pkl
resources/user_study_logs/active/8/: 0909_1101.pkl  0909_1101_partial.pkl
resources/user_study_logs/baseline/1/: 0905_1017.pkl  0905_1017_partial.pkl
resources/user_study_logs/baseline/2/: 0906_0921.pkl  0906_0921_partial.pkl
resources/user_study_logs/baseline/3/: 0906_1016.pkl  0906_1016_partial.pkl
resources/user_study_logs/baseline/4/: 0906_1231.pkl  0906_1231_partial.pkl
resources/user_study_logs/baseline/5/: 0906_1315.pkl  0906_1315_partial.pkl
resources/user_study_logs/baseline/6/: 0908_1116.pkl  0908_1116_partial.pkl
resources/user_study_logs/baseline/7/: 0909_1014.pkl  0909_1014_partial.pkl
resources/user_study_logs/baseline/8/: 0909_1110.pkl  0909_1110_partial.pkl
scripts/: pbd_interface_node.py  test_gui.py
src/: demo_interface.cpp  demo_interface_node.cpp  primitive_interface.cpp  primitive_interface_node.cpp
src/panda_demos/: __init__.py  data_recorder.py  gripper_segmentation.py  segmentation.py  trajectory_segmentation.py  trajectory_segmentation_greedy.py  trajectory_segmentation_old.py
src/panda_eup/: __init__.py  panda_primitive.py  pbd_interface.py  program_interpreter.py
src/panda_gui/: __init__.py  active_widgets.py  gui_elements.py  panda_widgets.py  rqt_panda_plugin.py
src/panda_pbd/: __init__.py  panda_primitive.py  pbd_interface.py  program_interpreter.py
src/panda_primitive/: __init__.py  panda_primitive.py
src/qt_range_slider/: __init__.py  qtRangeSlider.py
srv/: ApplyForceFingers.srv  CloseGripper.srv  EnableTeaching.srv  MoveFingers.srv  UserSync.srv
(+34 files in other folders)
